# clamav-rest-proxy

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker.yml
src/: main.rs
