[package]
name = "clamav-rest-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["multipart"] }
axum-macros = "0.3.0"
clamav-tcp = "0.2.1"
futures = "0.3"
infer = "0.11.0"
serde = { version = "1.0.148", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
